# udp2raw-rs

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: rust.yml
benches/: anti_replay_bench.rs  checksum_bench.rs  data_structures_bench.rs  encrypt_bench.rs  key_derivation_bench.rs  packet_build_bench.rs  pipeline_bench.rs
docs/: af-xdp-plan.md
examples/: encrypt_decrypt.rs  key_derivation.rs  packet_builder.rs
scripts/: test-xdp.sh
src/: client.rs  common.rs  connection.rs  encrypt.rs  fd_manager.rs  lib.rs  logging.rs  main.rs  mio_fd.rs  misc.rs  network.rs  server.rs  transport.rs  xdp.rs
tests/: anti_replay.rs  conv_manager.rs  encrypt_cross.rs  packet_headers.rs  wire_protocol.rs  xdp_integration.rs
udp2raw-ebpf/: Cargo.toml
udp2raw-ebpf/src/: main.rs
