[workspace]
exclude = ["udp2raw-ebpf"]

[package]
name = "udp2raw"
version = "0.1.0"
edition = "2021"
description = "UDP tunnel over encrypted raw sockets (FakeTCP/UDP/ICMP)"

[lib]
name = "udp2raw"
path = "src/lib.rs"

[[bin]]
name = "udp2raw"
path = "src/main.rs"

[features]
default = []
xdp = ["dep:aya", "dep:aya-build"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
chrono = "0.4"

# Event loop
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }

# Sockets & OS
socket2 = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["net", "ioctl", "signal", "fs"] }

# Crypto
aes = "0.8"
cbc = "0.1"
cfb-mode = "0.8"
ecb = "0.1"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
pbkdf2 = "0.12"
hkdf = "0.12"
cipher = { version = "0.4", features = ["block-padding"] }

# Misc
rand = "0.8"
bytes = "1"
lru = "0.12"

# AF_XDP (optional — only with --features xdp on Linux)
aya = { version = "0.13", optional = true }

[build-dependencies]
aya-build = { version = "0.1", optional = true }

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 2
lto = true
strip = true
