[package]
name = "udp2raw"
version = "0.1.0"
edition = "2021"
description = "UDP tunnel over encrypted raw sockets (FakeTCP/UDP/ICMP)"

[features]
default = []
xdp = [] # AF_XDP transport (Linux >= 5.7, CAP_NET_ADMIN + CAP_NET_RAW)

[lib]
name = "udp2raw"
path = "src/lib.rs"

[[bin]]
name = "udp2raw"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"

# Event loop
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }

# Sockets & OS
libc = "0.2"

# Crypto — all pinned to the cipher 0.4 / digest 0.10 ecosystem
aes = "0.8"
cbc = "0.1"
cfb-mode = "0.8"
ecb = "0.1"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
pbkdf2 = "0.12"
hkdf = "0.12"
cipher = { version = "0.4", features = ["block-padding"] }

# Misc
rand = "0.8"

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encrypt_bench"
harness = false

[[bench]]
name = "key_derivation_bench"
harness = false

[[bench]]
name = "checksum_bench"
harness = false

[[bench]]
name = "anti_replay_bench"
harness = false

[[bench]]
name = "packet_build_bench"
harness = false

[[bench]]
name = "data_structures_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
